--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.13.2",
+    "framer-motion": "^12.24.11",
+    "motion": "^12.24.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.6.3",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.11"
